# rix-msg

./: .clang-format  .gitignore  LICENSE.md  install.bash  install.sh  readme.md  requirements.txt  rixmsg  rixmsg-gen.py
cpp/: message.hpp  rixmsgConfig.cmake  serialization.hpp
cpp/include/: message_base.hpp  serialization.hpp
cstructjs/: package.json
defs/example/: ExampleMessage.json  OtherMessage.json
defs/example_msgs/: ExampleMessage.json  OtherMessage.json
defs/geometry/: Inertia.json  InertiaStamped.json  Point.json  PointStamped.json  Pose.json  Pose2D.json  Pose2DStamped.json  Quaternion.json  QuaternionStamped.json  Transform.json  Twist.json  Twist2D.json  Twist2DStamped.json  TwistStamped.json  Vector3.json
defs/geometry_msgs/: Inertia.json  InertiaStamped.json  Point.json  PointStamped.json  Pose.json  Pose2D.json  Pose2DStamped.json  PoseStamped.json  Quaternion.json  QuaternionStamped.json  TF.json  Transform.json  TransformStamped.json  Twist.json  Twist2D.json  Twist2DStamped.json  TwistStamped.json  Vector3.json  Vector3Stamped.json
defs/mediator/: ActInfo.json  ActRequest.json  ActResponse.json  Endpoint.json  Hash.json  LedgerInfo.json  NodeInfo.json  NodeRegister.json  Operation.json  ParamInfo.json  PubInfo.json  PubNotify.json  SrvInfo.json  SrvRequest.json  SrvResponse.json  Status.json  SubInfo.json  SubNotify.json  SystemInfo.json  TopicInfo.json  URI.json
defs/sensor/: ChannelFloat.json  ChannelInt32.json  CompressedImage.json  DepthImage.json  GameController.json  GameControllerFeedback.json  IMU.json  Image.json  JS.json  JointState.json  JointStateStamped.json  JointTrajectory.json  LaserScan.json  MotorPWM.json  MotorVelocity.json  PointCloud.json  WheelEncoder.json
defs/sensor_msgs/: ChannelFloat.json  ChannelInt32.json  CompressedImage.json  CompressedImageArray.json  DepthImage.json  GameController.json  GameControllerFeedback.json  IMU.json  Image.json  JS.json  JointState.json  JointTrajectory.json  LaserScan.json  MotorPWM.json  MotorVelocity.json  PointCloud.json  WheelEncoder.json
defs/standard/: Bool.json  Color.json  Double.json  DoubleArray.json  Duration.json  Float.json  FloatArray.json  Header.json  Int16Array.json  Int32.json  Int32Array.json  Int64.json  Int64Array.json  Int8Array.json  String.json  StringArray.json  Time.json  UInt16Array.json  UInt32.json  UInt32Array.json  UInt64.json  UInt64Array.json  UInt8Array.json  Void.json
defs/std_msgs/: Bool.json  Color.json  Double.json  DoubleArray.json  Duration.json  Float.json  FloatArray.json  Header.json  Int16.json  Int16Array.json  Int32.json  Int32Array.json  Int64.json  Int64Array.json  Int8.json  Int8Array.json  String.json  StringArray.json  Time.json  UInt16.json  (+8 more)
include/: error.hpp
js/: message.js  message_base.js  package.json
python/: __init__.py  message.py  message_base.py  setup.py  test_types.py  types.py
rix-msg/: CMakeLists.txt  rix_msgConfig.cmake  rixmsg  rixmsg-gen.py
rix-msg/defs/geometry/: Point.rixmsg  Pose.rixmsg  Quaternion.rixmsg  Twist2D.rixmsg  TwistStamped.rixmsg  particle.rixmsg  particles.rixmsg  pose2d.rixmsg  twist2d.rixmsg
rix-msg/defs/navigation/: OccupancyGrid.rixmsg  Path2D.rixmsg  PlannerRequest.rixmsg  SLAMReset.rixmsg  slam_status.rixmsg
rix-msg/defs/sensor/: CompressedImage.rixmsg  DepthImage.rixmsg  IMU.rixmsg  Image.rixmsg  LidarScan.rixmsg  MotorVelocity.rixmsg  encoders.rixmsg  motor_pwm.rixmsg
rix-msg/defs/standard/: ComponentInfo.rixmsg  Double.rixmsg  ID.rixmsg  Int16.rixmsg  Int32.rixmsg  Int64.rixmsg  String.rixmsg  Timestamp.rixmsg  UInt16.rixmsg  URI.rixmsg  info.rixmsg  timestamp.rixmsg
rix-msg/include/: common.hpp
rix-msg/include/rix/msg/: common.hpp
rix-msg/include/rix/msg/defs/core/: coremsg.rixmsg  disconnect.rixmsg  id.rixmsg  request.rixmsg
rix-msg/include/rix/msg/defs/geometry/: transformstamped.rixmsg
rix-msg/include/rix/msg/defs/mbot/: encoders.rixmsg  motorpwm.rixmsg  motorvel.rixmsg  timestamp.rixmsg  twist2d.rixmsg
rix-msg/python/: common.py  generate_cpp.py  generate_js.py  generate_py.py  rixmsg.py
rix-structjs/: index.js  package.json  struct.js
rixmsg/: CMakeLists.txt  rixmsgConfig.cmake  schema.json
rixmsg/defs/component/: ComponentInfo.rixmsg  ID.rixmsg
rixmsg/defs/geometry/: PointStamped.rixmsg  PoseStamped.json  PoseStamped.rixmsg  QuaternionStamped.rixmsg  TF.json  Transform.rixmsg  TransformStamped.json  Vector3Stamped.json  Vector3Stamped.rixmsg
rixmsg/defs/mediator/: ComponentInfo.json  Hash.json  ID.json  Info.json  Info.rixmsg  MessageInfo.rixmsg  URI.json  URI.rixmsg
rixmsg/defs/sensor/: DepthImage.json  JS.rixmsg  JointState.rixmsg  JointStateStamped.rixmsg
rixmsg/defs/standard/: Header.json  Header.rixmsg  Int16.json  Int8.json  UInt16.json  UInt64.rixmsg  UInt8.json  UInt8.rixmsg
rixmsg/include/: common.hpp  message_base.hpp  serializer.hpp
rixmsg/python/: create_cpp.py  generate_cpp.py  generate_js.py  generate_py.py  main.py  rixmsg.py  type_regex.py
rixmsg/rixmsg/: base_types.py  create_cpp.py  create_py.py  field.py  main.py  message.py  type_regex.py  validate_json.py
rixmsg/schema/: rixmsg.json
rixmsg/src/: base_types.py  create_cpp.py  create_js.py  create_protobuf.py  create_py.py  field.py  main.py  message.py  type_regex.py  validate_json.py
rixmsg/test/: ExampleMessage.json  Makefile  OtherMessage.json  test_create_cpp.py  test_create_js.py  test_create_py.py  test_message  test_message.cpp  test_type_regex.py
rixmsg/test/cpp/: ExampleMessage.hpp  OtherMessage.hpp
rixmsg/test/include/rix/msg/example/: ExampleMessage.hpp
rixmsg/test/js/: ExampleMessage.js  OtherMessage.js
rixmsg/test/python/: ExampleMessage.py  OtherMessage.py
rixmsg/tests/: test_create_cpp.py  test_create_py.py  test_type_regex.py
test/: CMakeLists.txt  test.cpp
test/cpp/: CMakeLists.txt  test.cpp  test_example.cpp  test_header.cpp  test_serialization.cpp
(+41 files in other folders)
